--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
                     <div class="grow-section-text">
                         <h2 class="section-header">Grow Together</h2>
                         <p>
-                            Generate meaningful discussions with your audience and build a <br>
-                            strong, loyal community. Think of the insightful conversations you <br>
+                            Generate meaningful discussions with your audience and build a 
+                            strong, loyal community. Think of the insightful conversations you 
                             miss out on with a feedback form. 
                         </p>
                     </div>
@@ -84,7 +84,7 @@
                     <div class="flowing-conversations-text">
                         <h2 class="section-header">Flowing Conversations</h2>
                         <p>
-                            You wouldn't paginate a conversation in real life, so why do it online? <br>
+                            You wouldn't paginate a conversation in real life, so why do it online? 
                             Our threads have just-in-time loading for a more natural flow.
                         </p>
                     </div>
@@ -106,8 +106,8 @@
                     <div class="grow-section-text">
                         <h2 class="section-header">Your Users</h2>
                         <p class="users-text">
-                            It takes no time at all to integrate Huddle with your app's <br>
-                            authentication solution. This means, once signed in to your app, your  <br> 
+                            It takes no time at all to integrate Huddle with your app's 
+                            authentication solution. This means, once signed in to your app, your  
                             users can start chatting immediately.
                         </p>
                     </div>
