--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 
               <div class="newsletter-input">
                 <input type="email" />
-                <button type="submit" class="subscribe-btn">Subscribe</button>
+                <button type="submit" class="subscribe-btn"><h6>Subscribe</h6></button>
               </div>
             </div>
           </div>
